Backport GHSA-jq4p-mq33-w375 to v2
Signed-off-by: Filippo Tessarotto <zoeslam@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,11 @@
         "forum": "https://discourse.laminas.dev"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "extra": {
         "laminas": {
